<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvQuestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvsu1" />

    <RadioGroup
        android:id="@+id/rgAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rCrazy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crazy" />

        <RadioButton
            android:id="@+id/rSexy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/superS" />

        <RadioButton
            android:id="@+id/rBoth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/both" />
    </RadioGroup>

    <Button
        android:id="@+id/bReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ret" />

    <TextView
        android:id="@+id/tvText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvsu2" />

</LinearLayout>