<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        android:id="@+id/etSqlName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvhotness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hotness" />

    <EditText
        android:id="@+id/etSqlHotness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bSqlUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update" />

    <Button
        android:id="@+id/bSqlOpenView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view" />

</LinearLayout>